apps/unifi/unifi-service.yaml
#---
#apiVersion: traefik.io/v1alpha1
#kind: ServersTransport
#metadata:
#  name: skipverify
#  namespace: default
#spec:
#  insecureSkipVerify: true
---
apiVersion: v1
kind: Service
metadata:
  name: unifi
  namespace: network
  annotations:
    traefik.ingress.kubernetes.io/service.serversscheme: https
    metallb.universe.tf/loadBalancerIPs: "192.168.11.207"
spec:
  type: LoadBalancer

  selector:
    app: unifi 
  ports:
    - name: "8080"
      port: 8080
      targetPort: 8080
    - name: "8081"
      port: 8081
      targetPort: 8081
    - name: "8443"
      port: 8443
      targetPort: 8443
    - name: "8843"
      port: 8843
      targetPort: 8843
    - name: "8880"
      port: 8880
      targetPort: 8880
    - name: "6789"
      port: 6789
      targetPort: 6789
    - name: "3478"
      port: 3478
      protocol: UDP
      targetPort: 3478
    - name: "10001"
      port: 10001
      protocol: UDP
      targetPort: 10001
    - name: "5514"
      port: 5514 
      protocol: UDP
      targetPort: 5514
