apps/unifi/unifi-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: unifi
  namespace: network
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`unifi.erix-homelab.site`)
      kind: Rule
      services:
        - name: unifi
          port: 8443
          scheme: https
          serversTransport: unifi-skip-verify
  tls:
    secretName: unifi-tls
